# NyquistNavigator

./: .gitignore  AliasingAtlas.ipynb  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_IMPROVEMENTS.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  sinewave-ampling.py
.github/: FUNDING.yml
exports/: aliasing_config_20260617_153619.json
src/aliasing_atlas/: __init__.py  __main__.py  app.py  dsp.py  exporting.py  learning.py  presets.py  signals.py  test_logic.py
tests/: test_dsp.py  test_exporting.py  test_phase4.py  test_presets.py
